[package]
categories.workspace = true
description = "Ceno runtime library"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "ceno_rt"
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
rkyv = { version = "0.8", default-features = false, features = [
  "alloc",
  "bytecheck",
] }

[features]
std = []
