[package]
name = "ceno_serde"
description = "Serde helpers for word-based serialization"
categories.workspace = true
keywords.workspace = true
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
bytemuck = { version = "1.14", features = ["extern_crate_alloc"] }

[dev-dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde"] }

[features]
default = []
