[package]
edition.workspace = true
license.workspace = true
name = "ceno_zkvm"
version.workspace = true

[dependencies]
ark-std.workspace = true
ff.workspace = true
goldilocks.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
serde.workspace = true

ceno_emul = { path = "../ceno_emul" }
ff_ext = { path = "../ff_ext" }
mpcs = { path = "../mpcs" }
multilinear_extensions = { version = "0", path = "../multilinear_extensions" }
sumcheck = { version = "0", path = "../sumcheck" }
transcript = { path = "../transcript" }

itertools.workspace = true
paste.workspace = true
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
tracing-flame.workspace = true
tracing-subscriber.workspace = true

clap = { version = "4", features = ["derive"] }
generic_static = "0"
rand = "0"
tempfile = "3"
thread_local = "1"

[dev-dependencies]
base64 = "0"
cfg-if = "1"
const_env = "0"
criterion.workspace = true
pprof.workspace = true
serde_json = "1"

[build-dependencies]
glob = "0"

[features]
default = ["riv32"]
flamegraph = ["pprof/flamegraph", "pprof/criterion"]
non_pow2_rayon_thread = []
riv32 = []
riv64 = []

[[bench]]
harness = false
name = "riscv_add"
