[package]
categories.workspace = true
description = "Ceno ZKVM"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "ceno_zkvm"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22"
ceno-examples = { path = "../examples-builder" }
ceno_emul = { path = "../ceno_emul" }
ceno_host = { path = "../ceno_host" }
ceno_gpu.workspace = true
either.workspace = true
ff_ext = { git = "https://github.com/scroll-tech/ceno", package = "ff_ext", rev = "7adb306" }
gkr_iop = { path = "../gkr_iop" }
keccakf = "0.1.2"
mpcs = { git = "https://github.com/scroll-tech/ceno", package = "mpcs", rev = "7adb306" }
multilinear_extensions = { git = "https://github.com/scroll-tech/ceno", package = "multilinear_extensions", rev = "7adb306" }
p3.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sumcheck.workspace = true
transcript = { git = "https://github.com/scroll-tech/ceno", package = "transcript", rev = "7adb306" }
witness = { git = "https://github.com/scroll-tech/ceno", package = "witness", rev = "7adb306" }

itertools.workspace = true
ndarray.workspace = true
num-traits.workspace = true
paste.workspace = true
poseidon.workspace = true
prettytable-rs.workspace = true
rkyv.workspace = true
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
tracing-forest.workspace = true
tracing-subscriber.workspace = true


bincode.workspace = true
clap.workspace = true
generic_static = "0.2"
parse-size = "1.1"
rand.workspace = true
tempfile = "3.14"
thread_local.workspace = true
tiny-keccak.workspace = true

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"], optional = true }
tikv-jemallocator = { version = "0.6", optional = true }

[dev-dependencies]
cfg-if.workspace = true
criterion.workspace = true
pprof2.workspace = true
proptest.workspace = true

[build-dependencies]
ceno-examples = { path = "../examples-builder" }
glob = "0.3"

[features]
default = ["forbid_overflow"]
flamegraph = ["pprof2/flamegraph", "pprof2/criterion"]
forbid_overflow = []
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl"]
jemalloc-prof = ["jemalloc", "tikv-jemallocator?/profiling"]
nightly-features = [
  "p3/nightly-features",
  "ff_ext/nightly-features",
  "mpcs/nightly-features",
  "multilinear_extensions/nightly-features",
  "poseidon/nightly-features",
  "sumcheck/nightly-features",
  "transcript/nightly-features",
  "witness/nightly-features",
]
sanity-check = ["mpcs/sanity-check"]

[[bench]]
harness = false
name = "riscv_add"

[[bench]]
harness = false
name = "fibonacci"

[[bench]]
harness = false
name = "fibonacci_witness"

[[bench]]
harness = false
name = "quadratic_sorting"

[[bench]]
harness = false
name = "is_prime"

[[bench]]
harness = false
name = "keccak"

[[bench]]
harness = false
name = "bitwise_keccakf"

[[bench]]
harness = false
name = "lookup_keccakf"
