[package]
categories.workspace = true
description = "Ceno ZKVM"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "ceno_zkvm"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22"
ceno-examples = { path = "../examples-builder" }
ceno_emul = { path = "../ceno_emul" }
ceno_gpu = { workspace = true, optional = true }
ceno_host = { path = "../ceno_host" }
cudarc = { workspace = true, optional = true }
either.workspace = true
ff_ext.workspace = true
gkr_iop = { path = "../gkr_iop" }
mpcs.workspace = true
multilinear_extensions.workspace = true
once_cell = "1.21.3"
p3.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sumcheck.workspace = true
transcript.workspace = true
whir.workspace = true
witness.workspace = true

itertools.workspace = true
ndarray.workspace = true
prettytable-rs.workspace = true
rustc-hash.workspace = true
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
tracing-forest.workspace = true
tracing-subscriber.workspace = true

bincode.workspace = true
cfg-if.workspace = true
clap.workspace = true
derive = { path = "../derive" }
generic-array.workspace = true
generic_static = "0.2"
num.workspace = true
num-bigint = "0.4.6"
parse-size = "1.1"
rand.workspace = true
sp1-curves.workspace = true
tempfile = "3.14"
tiny-keccak.workspace = true

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"], optional = true }
tikv-jemallocator = { version = "0.6", optional = true }

[dev-dependencies]
criterion.workspace = true
pprof2.workspace = true
proptest.workspace = true

[build-dependencies]
ceno-examples = { path = "../examples-builder" }
glob = "0.3"

[features]
bigint-rug = ["sp1-curves/bigint-rug"]
default = ["forbid_overflow", "nightly-features", "u16limb_circuit", "parallel", "bigint-rug"]
flamegraph = ["pprof2/flamegraph", "pprof2/criterion"]
forbid_overflow = []
goldilocks = ["forbid_overflow", "nightly-features", "parallel", "bigint-rug"]
gpu = ["gkr_iop/gpu", "dep:ceno_gpu"]
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl"]
jemalloc-prof = ["jemalloc", "tikv-jemallocator?/profiling"]
nightly-features = [
  "p3/nightly-features",
  "ff_ext/nightly-features",
  "mpcs/nightly-features",
  "multilinear_extensions/nightly-features",
  "sumcheck/nightly-features",
  "transcript/nightly-features",
  "witness/nightly-features",
]
parallel = ["whir/parallel", "p3/parallel", "multilinear_extensions/parallel", "mpcs/parallel"]
sanity-check = ["mpcs/sanity-check"]
u16limb_circuit = ["ceno_emul/u16limb_circuit"]

[[bench]]
harness = false
name = "riscv_add"

[[bench]]
harness = false
name = "fibonacci"

[[bench]]
harness = false
name = "fibonacci_witness"

[[bench]]
harness = false
name = "quadratic_sorting"

[[bench]]
harness = false
name = "is_prime"

[[bench]]
harness = false
name = "keccak"

[[bench]]
harness = false
name = "bitwise_keccakf"

[[bench]]
harness = false
name = "lookup_keccakf"

[[bench]]
harness = false
name = "weierstrass_add"

[[bench]]
harness = false
name = "weierstrass_double"
