[package]
categories = ["cryptography", "zk", "blockchain", "ceno"]
description = "Ceno RiscV guest examples"
edition = "2021"
keywords = ["cryptography", "zk", "blockchain", "ceno"]
license = "MIT OR Apache-2.0"
name = "examples"
readme = "README.md"
repository = "https://github.com/scroll-tech/ceno"
version = "0.1.0"

[dependencies]
alloy-primitives = { version = "1.3", features = ["native-keccak"] }
ceno_keccak = { path = "../guest_libs/keccak" }
ceno_rt = { path = "../ceno_rt" }
rand.workspace = true
tiny-keccak.workspace = true

rkyv = { version = "0.8", default-features = false, features = [
  "alloc",
  "bytecheck",
] }
substrate-bn.workspace = true
