[package]
categories = ["cryptography", "zk", "blockchain", "ceno"]
description = "Ceno RiscV guest examples"
edition = "2024"
keywords = ["cryptography", "zk", "blockchain", "ceno"]
license = "MIT OR Apache-2.0"
name = "examples"
readme = "README.md"
repository = "https://github.com/scroll-tech/ceno"
version = "0.1.0"

[dependencies]
alloy-consensus = { version = "1.0", features = ["crypto-backend"] }
alloy-primitives = { version = "1.3", features = ["native-keccak"] }
ceno_crypto = { path = "../guest_libs/crypto" }
ceno_crypto_primitives.workspace = true
ceno_keccak = { path = "../guest_libs/keccak" }
ceno_rt = { path = "../ceno_rt" }
ceno_sha2 = { path = "../guest_libs/sha2" }
ceno_syscall.workspace = true
getrandom = { version = "0.3" }
rand.workspace = true
revm-precompile.workspace = true
tiny-keccak.workspace = true

bn = { package = "substrate-bn", git = "https://github.com/scroll-tech/bn", branch = "ceno" }
k256 = { git = "https://github.com/scroll-tech/elliptic-curves", branch = "ceno/k256-13.4", default-features = false, features = ["std", "ecdsa"] }
p256 = { git = "https://github.com/scroll-tech/elliptic-curves", branch = "ceno/k256-13.4", default-features = false, features = ["std", "ecdsa", "arithmetic"] }
substrate-bn.workspace = true

[features]
profiling = ["k256/std", "k256/ecdsa", "k256/profiling", "p256/std", "p256/ecdsa", "p256/arithmetic", "p256/profiling"]
