[package]
edition.workspace = true
license.workspace = true
name = "ff_ext"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff.workspace = true
goldilocks.workspace = true
poseidon.workspace = true
serde.workspace = true
