[package]
categories.workspace = true
description = "Extra functionality for the ff ((finite fields) crate"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "ff_ext"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
p3 = { path = "../p3" }
rand_core.workspace = true
serde.workspace = true

[features]
default = ["babybear"]
babybear = []
goldilocks = []