[package]
name = "gkr-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description = "Graphs for GKR"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
ff_ext = { path = "../ff_ext" }
ark-std.workspace = true
ff.workspace = true
gkr = { path = "../gkr", features = ["parallel"] }
goldilocks.workspace = true
itertools = "0.12.1"
multilinear_extensions = { version = "0.1.0", path = "../multilinear_extensions" }
simple-frontend = { version = "0.1.0", path = "../simple-frontend" }
sumcheck = { version = "0.1.0", path = "../sumcheck" }
transcript = { version = "0.1.0", path = "../transcript" }
