[package]
edition.workspace = true
license.workspace = true
name = "gkr"
version.workspace = true

[dependencies]
ark-std.workspace = true
ff.workspace = true
goldilocks.workspace = true

const_env = "0"
crossbeam-channel = "0"
ff_ext = { path = "../ff_ext" }
itertools.workspace = true
multilinear_extensions = { path = "../multilinear_extensions" }
rayon.workspace = true
serde.workspace = true
serde_json = "1"
simple-frontend = { path = "../simple-frontend" }
sumcheck = { path = "../sumcheck" }
tracing.workspace = true
tracing-flame.workspace = true
tracing-subscriber.workspace = true
transcript = { path = "../transcript" }

[dev-dependencies]
cfg-if = "1"
criterion = { version = "0", features = ["html_reports"] }
pprof = { version = "0", features = ["flamegraph"] }
tiny-keccak = { version = "2", features = ["keccak"] }

[features]
default = []
flamegraph = ["pprof/flamegraph", "pprof/criterion"]
non_pow2_rayon_thread = ["sumcheck/non_pow2_rayon_thread"]
parallel = []
unsafe = []

[[bench]]
harness = false
name = "keccak256"
