[package]
categories.workspace = true
description = "GKR IOP protocol implementation"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "gkr_iop"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bincode.workspace = true
either.workspace = true
ff_ext = { path = "../ff_ext" }
itertools.workspace = true
mpcs = { path = "../mpcs" }
multilinear_extensions = { version = "0.1.0", path = "../multilinear_extensions" }
p3.workspace = true
p3-field.workspace = true
p3-goldilocks.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
sumcheck.workspace = true
thiserror.workspace = true
thread_local.workspace = true
tracing.workspace = true
transcript = { path = "../transcript" }
witness = { path = "../witness" }

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"], optional = true }
tikv-jemallocator = { version = "0.6", optional = true }

[dev-dependencies]
criterion.workspace = true

[features]
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl"]
