[package]
categories.workspace = true
description = "GKR IOP protocol implementation"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "gkr_iop"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bincode.workspace = true
ceno_gpu = { workspace = true, optional = true }
either.workspace = true
ff_ext.workspace = true
itertools.workspace = true
mpcs.workspace = true
multilinear_extensions.workspace = true
p3.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
sumcheck.workspace = true
thiserror.workspace = true
thread_local.workspace = true
tracing.workspace = true
transcript.workspace = true
witness.workspace = true

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"], optional = true }
tikv-jemallocator = { version = "0.6", optional = true }

[dev-dependencies]
criterion.workspace = true

[features]
gpu = ["dep:ceno_gpu"]
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl"]
