[package]
categories.workspace = true
description = "GKR IOP protocol implementation"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "gkr_iop"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bincode.workspace = true
ceno_gpu = { workspace = true, optional = true }
cudarc = { version = "0.13.0", features = ["driver", "cuda-version-from-build-system"], optional = true }
either.workspace = true
ff_ext.workspace = true
itertools.workspace = true
mpcs.workspace = true
multilinear_extensions.workspace = true
once_cell = "1.21.3"
p3.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
sumcheck.workspace = true
thiserror.workspace = true
thread_local.workspace = true
tracing.workspace = true
tracing-forest.workspace = true
tracing-subscriber.workspace = true
transcript.workspace = true
witness.workspace = true

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"], optional = true }
tikv-jemallocator = { version = "0.6", optional = true }

[dev-dependencies]
criterion.workspace = true

[features]
default = ["gpu"]
gpu = ["dep:ceno_gpu", "dep:cudarc"]
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl"]
