[package]
name = "goldilocks"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff.workspace = true
rand_core.workspace = true
subtle.workspace = true
serde.workspace = true


[dev-dependencies]
rand_xorshift.workspace = true
ark-std.workspace = true