[package]
edition = "2021"
name = "guest"
readme = "README.md"
resolver = "2"
version = "0.1.0"

[dependencies]
# NOTE: you can use path dependencies for local development.
# ceno_rt = { git = "https://github.com/scroll-tech/ceno", branch = "matthias/ceno_host" }
ceno_rt = { path = "../../ceno/ceno_rt", features = ["std"]}
rkyv = { version = "0.8", default-features = false, features = [
  "alloc",
  "bytecheck",
] }

[profile.dev]
panic = "abort"
lto = "thin"

[profile.release]
panic = "abort"
lto = "fat"
