[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
elf = { path = "../elf" }
anyhow = "1"

# NOTE: you can use path dependencies for local development.
ceno_emul = { git = "https://github.com/scroll-tech/ceno", branch="matthias/standalone-hints" }
# ceno_emul = { path = "../../ceno/ceno_emul" }
ceno_host = { git = "https://github.com/scroll-tech/ceno", branch="matthias/standalone-hints" }
# ceno_host = { path = "../../ceno/ceno_host" }
