[package]
name = "host"
version.workspace = true
edition = "2021"
categories.workspace = true
description = "Support for the host port of a Ceno application"
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
elf = { path = "../elf" }
anyhow = "1"

# NOTE: you can use path dependencies for local development.
ceno_emul = { git = "https://github.com/scroll-tech/ceno", branch = "matthias/ceno_host" }
# ceno_emul = { path = "../../ceno/ceno_emul" }
ceno_host = { git = "https://github.com/scroll-tech/ceno", branch = "matthias/ceno_host" }
# ceno_host = { path = "../../ceno/ceno_host" }
