[package]
# authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
# description = "revm Interpreter"
# edition = "2021"
# keywords = ["no_std", "ethereum", "evm", "revm", "interpreter"]
# license = "MIT"
name = "revm-interpreter"
# repository = "https://github.com/bluealloy/revm"
# version = "1.3.0"
# readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ark-std.workspace = true
ff.workspace = true
goldilocks.workspace = true
serde.workspace = true
revm-primitives = { git = "https://github.com/bluealloy/revm.git", rev = "6a8b44d", default-features = false }
singer = { version = "0.1.0", path = "../singer" }

# serde = { version = "1.0", features = ["derive", "rc"], optional = true }

[features]
default = ["std"]
std = ["revm-primitives/std"]
# serde = ["dep:serde", "revm-primitives/serde"]
serde = ["revm-primitives/serde"]
arbitrary = ["std", "revm-primitives/arbitrary"]

optimism = ["revm-primitives/optimism"]

dev = [
    "memory_limit",
    "optional_balance_check",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_gas_refund",
    "optional_no_base_fee",
    "optional_beneficiary_reward",
]
memory_limit = ["revm-primitives/memory_limit"]
optional_balance_check = ["revm-primitives/optional_balance_check"]
optional_block_gas_limit = ["revm-primitives/optional_block_gas_limit"]
optional_eip3607 = ["revm-primitives/optional_eip3607"]
optional_gas_refund = ["revm-primitives/optional_gas_refund"]
optional_no_base_fee = ["revm-primitives/optional_no_base_fee"]
optional_beneficiary_reward = ["revm-primitives/optional_beneficiary_reward"]
