[package]
categories.workspace = true
description = "Multilinear Polynomial Commitment Scheme"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "mpcs"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
aes = "0.8"
ark-std.workspace = true
bitvec = "1.0"
ctr = "0.9"
ff_ext = { path = "../ff_ext" }
# TODO: move to version 1, once our dependencies are updated
ark-ff = "0.5"
ark-serialize = { version = "0.5", features = ["derive"] }
bincode = "1.3.3"
ceno_sumcheck = { path = "../sumcheck", package = "sumcheck" }
generic-array = { version = "0.14", features = ["serde"] }
itertools.workspace = true
multilinear_extensions = { path = "../multilinear_extensions" }
num-bigint = "0.4"
num-integer = "0.1"
p3-dft.workspace = true
p3-field.workspace = true
p3-goldilocks.workspace = true
p3-matrix.workspace = true
p3-mds.workspace = true
p3-maybe-rayon = { workspace = true, features = ["parallel"] }
p3-symmetric.workspace = true
p3-commit.workspace = true
p3-merkle-tree.workspace = true
plonky2.workspace = true
poseidon.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rayon = { workspace = true, optional = true }
serde.workspace = true
tracing.workspace = true
transcript = { path = "../transcript" }
whir = { path = "../whir", features = ["ceno"] }
witness = { path = "../witness" }
zeroize = "1.8"

[dev-dependencies]
criterion.workspace = true

[features]
benchmark = ["parallel"]
default = ["parallel"] # Add "sanity-check" to debug
parallel = ["dep:rayon"]
print-trace = ["ark-std/print-trace", "whir/print-trace"]
sanity-check = []

[[bench]]
harness = false
name = "basefold"

[[bench]]
harness = false
name = "rscode"

[[bench]]
harness = false
name = "interpolate"

[[bench]]
harness = false
name = "fft"

[[bench]]
harness = false
name = "utils"

[[bench]]
harness = false
name = "whir"
