[package]
categories.workspace = true
description = "Multilinear Polynomial Commitment Scheme"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "mpcs"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
aes = "0.8"
bincode = "1.3.3"
bitvec = "1.0"
clap.workspace = true
ctr = "0.9"
ff_ext = { git = "https://github.com/scroll-tech/ceno", package = "ff_ext", rev = "7c277a1" }
generic-array = { version = "0.14", features = ["serde"] }
itertools.workspace = true
multilinear_extensions = { git = "https://github.com/scroll-tech/ceno", package = "multilinear_extensions", rev = "7c277a1" }
num-bigint = "0.4"
num-integer = "0.1"
p3.workspace = true
poseidon.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rayon = { workspace = true, optional = true }
serde.workspace = true
sumcheck.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
transcript = { git = "https://github.com/scroll-tech/ceno", package = "transcript", rev = "7c277a1" }
whir = { path = "../whir" }
witness = { git = "https://github.com/scroll-tech/ceno", package = "witness", rev = "7c277a1" }
zeroize = "1.8"

[dev-dependencies]
criterion.workspace = true

[features]
benchmark = ["parallel"]
default = ["parallel"] # Add "sanity-check" to debug
nightly-features = [
  "p3/nightly-features",
  "ff_ext/nightly-features",
  "multilinear_extensions/nightly-features",
  "sumcheck/nightly-features",
  "transcript/nightly-features",
  "whir/nightly-features",
  "witness/nightly-features",
]
parallel = ["dep:rayon"]
print-trace = ["whir/print-trace"]
sanity-check = []

[[bench]]
harness = false
name = "basefold"

[[bench]]
harness = false
name = "rscode"

[[bench]]
harness = false
name = "interpolate"

[[bench]]
harness = false
name = "whir"
