[package]
categories.workspace = true
description = "Multilinear extensions for the Ceno project"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "multilinear_extensions"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ark-std.workspace = true
ff.workspace = true
ff_ext = { path = "../ff_ext" }
goldilocks.workspace = true
itertools = "0.12.1"
rayon.workspace = true
serde.workspace = true
tracing = { workspace = true }
tracing-flame = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.7"
log = "0.4"

[features]
parallel = []
