[package]
edition.workspace = true
license.workspace = true
name = "multilinear_extensions"
version.workspace = true

[dependencies]
ark-std.workspace = true
ff.workspace = true
ff_ext = { path = "../ff_ext" }
goldilocks.workspace = true
itertools = "0"
rayon.workspace = true
serde.workspace = true
tracing = "0"
tracing-flame = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0", features = ["html_reports"] }
env_logger = "0"
log = "0"

[features]
parallel = []
