[package]
categories.workspace = true
description = "Poseidon hash function"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "poseidon"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
criterion.workspace = true
ff_ext = { path = "../ff_ext" }
p3-challenger.workspace = true
p3-field.workspace = true
p3-goldilocks.workspace = true
p3-mds.workspace = true
p3-poseidon2.workspace = true
p3-symmetric.workspace = true
serde.workspace = true
unroll = "0.1"

[dev-dependencies]
ark-std.workspace = true
plonky2.workspace = true
rand.workspace = true

[[bench]]
harness = false
name = "hashing"

[features]
default = ["hash_count"]
hash_count = []