[package]
categories.workspace = true
description = "Poseidon hash function"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "poseidon"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
criterion.workspace = true
ff_ext = { git = "https://github.com/scroll-tech/ceno", package = "ff_ext", rev = "7adb306" }
p3.workspace = true
serde.workspace = true
unroll = "0.1"

[dev-dependencies]
rand.workspace = true

[features]
nightly-features = ["p3/nightly-features", "ff_ext/nightly-features"]
