
[package]
name = "simple-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description = "Simple frontend for the Ceno framework"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
ff_ext = { path = "../ff_ext" }
ark-std.workspace = true
ff.workspace = true
goldilocks.workspace = true
itertools = "0.12.1"
rayon.workspace = true
serde.workspace = true
