
[package]
categories.workspace = true
description = "Simple frontend for the Ceno framework"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "simple-frontend"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ark-std.workspace = true
ff.workspace = true
ff_ext = { path = "../ff_ext" }
goldilocks.workspace = true
itertools = "0.12.1"
rayon.workspace = true
serde.workspace = true
