
[package]
categories.workspace = true
description = "Simple frontend for the Ceno framework"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "simple-frontend"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ff.workspace = true
ff_ext = { path = "../ff_ext" }
goldilocks.workspace = true
itertools.workspace = true
serde.workspace = true
