[package]
name = "singer"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std.workspace = true
ff.workspace = true
goldilocks.workspace = true
rayon.workspace = true
serde.workspace = true

gkr = { path = "../gkr", features = ["dbg-assert-const"] }
transcript = { path = "../transcript" }
mpcs = { path = "../mpcs" }
gkr-graph = { version = "0.1.0", path = "../gkr-graph" }
revm-interpreter = { path = "../interpreter" }
revm-primitives = { git = "https://github.com/bluealloy/revm.git", rev = "6a8b44d", default-features = false }
itertools = "0.12.0"
strum = "0.25.0"
strum_macros = "0.25.3"
num-traits = "0.2"
num-derive = "0.2"
simple-frontend = { version = "0.1.0", path = "../simple-frontend" }
paste = "1.0.14"
singer-utils = { version = "0.1.0", path = "../singer-utils" }
multilinear_extensions = { version = "0.1.0", path = "../multilinear_extensions" }

[features]
witness-count = []
test-dbg = []
dbg-add-opcode = []
dbg-assert-const = []