[package]
categories.workspace = true
description = "Singer zkSNARK"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "singer"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ark-std.workspace = true
ff.workspace = true
goldilocks.workspace = true
rayon.workspace = true
serde.workspace = true

ff_ext = { path = "../ff_ext" }
gkr = { path = "../gkr", features = ["parallel"] }
gkr-graph = { version = "0.1.0", path = "../gkr-graph" }
mpcs = { path = "../mpcs" }
multilinear_extensions = { version = "0.1.0", path = "../multilinear_extensions" }
simple-frontend = { version = "0.1.0", path = "../simple-frontend" }
singer-utils = { version = "0.1.0", path = "../singer-utils" }
transcript = { path = "../transcript" }

itertools = "0.12.1"
paste = "1.0.15"
strum = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }
tracing-flame = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
cfg-if = "1.0.0"
const_env = "0.1.2"
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph"] }

[features]
dbg-add-opcode = []
flamegraph = ["pprof/flamegraph", "pprof/criterion"]
non_pow2_rayon_thread = []
test-dbg = []
witness-count = []

[[bench]]
harness = false
name = "add"
