[package]
edition.workspace = true
license.workspace = true
name = "singer"
version.workspace = true

[dependencies]
ark-std.workspace = true
ff.workspace = true
goldilocks.workspace = true
rayon.workspace = true
serde.workspace = true

ff_ext = { path = "../ff_ext" }
gkr = { path = "../gkr", features = ["parallel"] }
gkr-graph = { version = "0", path = "../gkr-graph" }
mpcs = { path = "../mpcs" }
multilinear_extensions = { version = "0", path = "../multilinear_extensions" }
simple-frontend = { version = "0", path = "../simple-frontend" }
singer-utils = { version = "0", path = "../singer-utils" }
transcript = { path = "../transcript" }

itertools.workspace = true
paste = "1"
strum.workspace = true
strum_macros.workspace = true
tracing = "0"
tracing-flame = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }

[dev-dependencies]
cfg-if = "1"
const_env = "0"
criterion = { version = "0", features = ["html_reports"] }
pprof = { version = "0", features = ["flamegraph"] }

[features]
dbg-add-opcode = []
flamegraph = ["pprof/flamegraph", "pprof/criterion"]
non_pow2_rayon_thread = []
test-dbg = []
witness-count = []

[[bench]]
harness = false
name = "add"
