[package]
name = "singer_basic"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std.workspace = true
ff.workspace = true
goldilocks.workspace = true
rayon.workspace = true
serde.workspace = true

frontend = { path = "../frontend" }
gkr = { path = "../gkr" }
transcript = { path = "../transcript" }
mpcs = { path = "../mpcs" }
gkr-graph = { version = "0.1.0", path = "../gkr-graph" }
itertools = "0.12.0"
