[package]
categories.workspace = true
description = "Subprotocols"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "subprotocols"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ark-std.workspace = true
ff_ext = { path = "../ff_ext" }
itertools.workspace = true
multilinear_extensions = { version = "0.1.0", path = "../multilinear_extensions" }
p3-field.workspace = true
rand.workspace = true
rayon.workspace = true
thiserror = "1"
transcript = { path = "../transcript" }

[dev-dependencies]
criterion.workspace = true
p3-goldilocks.workspace = true

[[bench]]
harness = false
name = "expr_based_logup"
